--- a/app/views/foods/_search.html.haml
+++ b/app/views/foods/_search.html.haml
@@ -13,8 +13,8 @@
       = f.submit "検索"
 
     %p カテゴリーで検索
-    = form_with url: "/more/:id", method: :get ,local: true do |f|
-      = f.select :category_id, [["カテゴリーを選択してください",""], ["和食",1], ["洋食",2], ["中華",3], ["弁当",4], ["おかず",5]], {}, {class: "search__input"}
+    = form_with url: "/more", method: :get ,local: true do |f|
+      = f.select :category, [["カテゴリーを選択してください",""], ["肉","肉"], ["野菜","野菜"], ["中華","中華"], ["魚","魚"], ["麺類","麺類"], ["ご飯物","ご飯物"], ["パン","パン"], ["スープ","スープ"], ["煮物","煮物"], ["中華","中華"], ["パスタ","パスタ"], ["時短","時短"], ["その他(和食)","その他(和食)"], ["その他(洋食)","その他(洋食)"]], {}, {class: "search__input"}
       = f.submit "検索"
 
     %p 条件で検索
