--- a/app/views/foods/search.html.haml
+++ b/app/views/foods/search.html.haml
@@ -23,3 +23,5 @@
                 = "#{food.category_id}"
               %span.good_count
                 = "いいね数🧡#{food.goods_count}"
+    .paginate
+      = paginate(@foods)
