--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -88,7 +88,7 @@ header {
 }
 
 .middle {
-  width:90vw;
+  width:85vw;
   height:100%;
   margin:50px auto 0;
   background:#fff;
@@ -298,6 +298,12 @@ header {
   color:#000;
   float:right;
   font-size:14px;
+}
+
+.paginate {
+  width:100%;
+  height:40px;
+  padding-left:20px;
 }
 
 .search__food {
