--- a/app/assets/stylesheets/_signin.scss
+++ b/app/assets/stylesheets/_signin.scss
@@ -1,6 +1,6 @@
 .sign {
   width:500px;
-  margin:40px auto 0;
+  margin:40px auto 133px;
   background:#fff;
   border:solid 1px rgb(255, 123, 0);
   border-radius:5px;
