--- a/app/views/foods/more.html.haml
+++ b/app/views/foods/more.html.haml
@@ -20,3 +20,5 @@
                 = "#{food.category_id}"
               %span.good_count
                 = "いいね数🧡#{food.goods_count}"
+    .paginate
+      = paginate(@foods)
