--- a/app/views/user/show.html.haml
+++ b/app/views/user/show.html.haml
@@ -18,3 +18,6 @@
             .list__food__info__btn
               = link_to "編集する", edit_food_path(food.id), class: "info__btn"
               = link_to "削除する", "/foods/#{food.id}", method: :delete, class: "info__btn delete__btn"
+
+      .paginate
+        = paginate(@foods)
