--- a/app/views/foods/search.html.haml
+++ b/app/views/foods/search.html.haml
@@ -8,7 +8,7 @@
       - else
         %p
           = "#{@input}の検索結果"
-    .main__contents__bottom
+    .main__contents__bottom.main__wrap
       - @foods.each do |food|
         .main__food.search__food
           %p
