--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -29,7 +29,6 @@ header {
 
 .header {
   width: 70vw;
-  height: 110px;
   margin: 0 auto;
   color: #fff;
   &__top {
@@ -37,7 +36,7 @@ header {
     height:40px;
     p {
       color: #fff;
-      width:400px;
+      // width:400px;
       font-size: 70px;
       font-family: 'Snell Roundhand',sans-serif;
       &:hover {
@@ -49,7 +48,6 @@ header {
   }
   &__bottom {
     width: 100%;
-    height: 50px;
     &__sign {
       float: right;
       ul {
@@ -114,7 +112,7 @@ header {
         font-weight:600;
         + span {
           color:rgb(0, 132, 255);
-          font-size:18px;
+          font-size:17px;
         }
       }
     }
@@ -157,11 +155,11 @@ header {
   height: calc( 100% - 90px );
   margin-top: 40px;
   &__side {
-    width: 400px;
+    width: 28%;
     height: 100%;
     float: left;
     &__search {
-      width: 300px;
+      width: 80%;
       height: calc( 100% - 40px);
       // height: 600px;
       border:solid 1px rgb(255, 123, 0);
@@ -177,16 +175,24 @@ header {
         margin-bottom:10px;
       }
       .search__input {
-        width:260px;
+        width:100%;
+        // width:260px;
         height:30px;
+        border:solid 1px gray;
+        border-radius:5px;
         + input {
-          position:relative;
-          left:218px;
-          margin-bottom:10px;
+          background:#fff;
+          border:solid 1px gray;
+          border-radius:5px;
+          padding:2px 8px;
+          font-size:12px;
+          cursor:pointer;
+          margin-bottom:20px;
         }
       }
       .search__list {
-        width:216px;
+        width:70%;
+        // width:216px;
         min-height:0px;
         position:absolute;
         top:113px;
@@ -209,7 +215,7 @@ header {
     }
   }
   &__contents {
-    width: calc( 98vw - 400px);
+    width: calc( 98vw - 28%);
     height: calc( 100% - 40px);
     margin-bottom:60px;
     float: left;
@@ -228,6 +234,7 @@ header {
         font-weight: 600;
       }
       .main__more {
+        background:#fff;
         color:rgb(0, 132, 255);
         border:none;
         cursor:pointer;
@@ -240,12 +247,14 @@ header {
       min-height: 320px;
       margin: 20px auto 60px;
       display: flex;
+    }
+    .main__wrap {
       flex-wrap: wrap;
     }
   }
   &__food {
     width: 31%;
-    margin: 10px;
+    margin: 10px 0px 10px 10px;
     border: solid 1px rgb(222, 213, 192);
     border-radius:5px;
     position:relative;
@@ -262,7 +271,7 @@ header {
       opacity:0;
       position:absolute;
       top:-85px;
-      left:20px;
+      right:10px;
     }
     &__img {
       width: 100%;
@@ -270,10 +279,10 @@ header {
     }
     &__name {
       width: 94%;
-      height: 55px;
+      min-height: 55px;
       color: rgb(125, 148, 10);
       margin: 0px auto;
-      overflow: hidden;
+      // overflow: hidden;
     }
     &:hover {
       border:solid 1px rgb(0, 110, 255);
