--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -1,15 +1,14 @@
 .mypage {
   width:100vw;
-  height:calc( 100vh - 90px);
+  height:calc( 100% - 90px);
+  padding:40px 0;
+  display:flex;
   &__side {
-    width:400px;
     height:100%;
-    float:left;
-    padding:40px;
+    width:18%;
+    margin:0 20px;
     ul {
       background:#fff;
-      width:250px;
-      float:right;
       border:solid 1px rgb(255, 123, 0);
       border-radius: 5px;
       border-bottom:none;
@@ -31,12 +30,11 @@
     }
   }
   &__main {
-    float:right;
-    width:calc( 100% - 400px);
+    width: calc( 100% - 20%);
     height:100%;
-    padding:40px;
+    margin:0 auto;
     &__list {
-      width:80%;
+      width:90%;
       height:100%;
       background:#fff;
       border:solid 1px rgb(255, 123, 0);
@@ -57,7 +55,7 @@
         padding:20px;
         display:flex;
         &__img {
-          width:350px;
+          width:30vw;
           height:350px;
           border: solid 1px rgb(222, 213, 192);
           border-radius: 5px;
@@ -70,7 +68,7 @@
             font-weight:600;
           }
           > p {
-            width:250px;
+            width:90%;
             min-height:50px;
             color: rgb(125, 148, 10);
             border: solid 1px rgb(222, 213, 192);
@@ -79,7 +77,7 @@
             margin-bottom:10px;
           }
           &__btn {
-            width:280px;
+            width:100%;
             height:50px;
             position:absolute;
             bottom:0;
@@ -92,7 +90,7 @@
               text-align:center;
               display:inline-block;
               margin-right:10px;
-              min-width:120px;
+              width:40%;
               height:50px;
               padding:0 10px;
               &:hover {
