--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -26,12 +26,12 @@
     width:100%;
     display:flex;
     &__img{
-      width:450px;
+      width:45%;
       height:400px;
       margin:20px 0 0 20px;
     }
     &__stuffs {
-      width: calc( 100% - 550px);
+      width: calc( 100% - 45%);
       margin:20px;
       table {
         width:90%;
@@ -184,7 +184,7 @@
       flex-wrap:wrap;
       .other__food {
         width:30%;
-        margin:0px 10px 20px;
+        margin:0px 0px 20px 10px;
         border: solid 1px rgb(222, 213, 192);
         border-radius:5px;
         &:hover {
@@ -197,7 +197,7 @@
         }
         > p {
           color:rgb(125, 148, 10);
-          height:50px;
+          min-height:50px;
           padding:0 10px;
         }
         &__info {
