--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -2,7 +2,7 @@
 @media screen and (min-width: 767px) {
 
   body {
-    background:rgb(255, 218, 218);
+    // background:rgb(255, 218, 218);
   }
 
 
@@ -17,7 +17,7 @@
 @media screen and (max-width: 767px) {
 
   body {
-    background:rgb(221, 221, 255);
+    // background:rgb(221, 221, 255);
   }
 
   header {
@@ -145,7 +145,7 @@
 @media screen and (max-width: 479px) {
 
   body {
-    background:rgb(225, 252, 225);
+    // background:rgb(225, 252, 225);
   }
 
 }
