--- a/app/assets/stylesheets/_new.scss
+++ b/app/assets/stylesheets/_new.scss
@@ -114,11 +114,11 @@
   top:30px;
 }
 
-.update__after, .delete {
-  width:100vw;
-  height:100vh;
-  background:#fff;
-}
+// .update__after, .delete {
+//   width:100vw;
+//   height:100vh;
+//   background:#fff;
+// }
 
 .new__image__preview {
   width:300px;
@@ -145,4 +145,53 @@
       color:gray;
     }
   }
+}
+
+.field_with_errors {
+  .up-image {
+    width:100%;
+    height:100%;
+    margin:0;
+    display:none;
+  }
+}
+
+.foodstuff_input {
+  .field_with_errors {
+    > input {
+      width:100%;
+      margin:0;
+    }
+  }
+}
+
+.recipe_input {
+  .field_with_errors {
+    width:100%;
+    > input {
+      width:80%;
+      margin:0;
+    }
+  }
+}
+
+.alert {
+  color:red;
+  margin-top:10px;
+  margin-left:10px;
+  font-size:14px;
+}
+
+.foodstuff_alert {
+  color:red;
+  margin-top:10px;
+  margin-left:10px;
+  font-size:14px;
+}
+
+.recipe_alert {
+  color:red;
+  margin-top:10px;
+  margin-left:10px;
+  font-size:14px;
 }
