--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -61,6 +61,7 @@
           border-radius: 5px;
         }
         &__info {
+          width:400px;
           padding-left:20px;
           position:relative;
           > h1 {
@@ -76,6 +77,9 @@
             padding:5px;
             margin-bottom:10px;
           }
+          .show__btn {
+            position:static;
+          }
           &__btn {
             width:100%;
             height:50px;
@@ -84,6 +88,7 @@
             > a {
               background:rgb(255, 158, 48);
               color: #fff;
+              font-size:14px;
               font-weight:600;
               line-height:50px;
               border-radius: 5px;
@@ -106,3 +111,6 @@
     }
   }
 }
+
+
+
