--- a/app/assets/stylesheets/_index.scss
+++ b/app/assets/stylesheets/_index.scss
@@ -211,6 +211,10 @@ header {
             cursor:pointer;
           }
         }
+        span {
+          padding:2px 5px;
+          font-size:13px;
+        }
       }
     }
   }
