--- a/app/views/user/show.html.haml
+++ b/app/views/user/show.html.haml
@@ -7,7 +7,8 @@
         = "#{current_user.nickname}の投稿一覧"
       - @foods.each do |food|
         .list__food
-          = image_tag food.image.url, class: "list__food__img"
+          = link_to "/foods/#{food.id}" do
+            = image_tag food.image.url, class: "list__food__img"
           .list__food__info
             %h1 料理名
             %p
@@ -15,8 +16,6 @@
             %h1 説明
             %p
               = food.text
-            .list__food__info__btn.show__btn
-              = link_to "詳細ページに行く", "/foods/#{food.id}", class: "info__btn"
             .list__food__info__btn
               = link_to "編集する", edit_food_path(food.id), class: "info__btn"
               = link_to "削除する", "/foods/#{food.id}", method: :delete, class: "info__btn delete__btn"
