--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -64,7 +64,7 @@
           width:400px;
           padding-left:20px;
           position:relative;
-          > h1 {
+          h1 {
             font-size:17px;
             font-weight:600;
           }
@@ -77,9 +77,6 @@
             padding:5px;
             margin-bottom:10px;
           }
-          .show__btn {
-            position:static;
-          }
           &__btn {
             width:100%;
             height:50px;
@@ -88,7 +85,7 @@
             > a {
               background:rgb(255, 158, 48);
               color: #fff;
-              font-size:14px;
+              font-size:12px;
               font-weight:600;
               line-height:50px;
               border-radius: 5px;
