--- a/app/views/foods/new.html.haml
+++ b/app/views/foods/new.html.haml
@@ -2,13 +2,13 @@
   .new__form
     %h1 レシピ新規投稿
     = form_for [@food] do |f|
-      .new__input#1
+      .new__input
         = f.label "料理名"
         %span 必須
         = f.text_field :food_name, placeholder: "  料理名を入力してください(40文字まで)"
         = render partial: "error", locals: {food: @food, column: "food_name"}
 
-      .new__input#2
+      .new__input
         %p
           画像
           %span 必須
@@ -20,19 +20,19 @@
               %p クリックして画像をアップロード
         = render partial: "error", locals: {food: @food, column: "image"}
 
-      .new__input#3
+      .new__input
         = f.label "説明"
         %span 必須
         = f.text_field :text, placeholder: "  料理の説明文を入力してください(80文字まで)"
         = render partial: "error", locals: {food: @food, column: "text"}
 
-      .new__input#4
+      .new__input
         = f.label "カテゴリー"
         %span 必須
         = f.select :category_id, [["カテゴリーを選択してください",""], ["肉","肉"], ["野菜","野菜"], ["中華","中華"], ["魚","魚"], ["麺類","麺類"], ["ご飯物","ご飯物"], ["パン","パン"], ["スープ","スープ"], ["煮物","煮物"], ["中華","中華"], ["パスタ","パスタ"], ["時短","時短"], ["その他(和食)","その他(和食)"], ["その他(洋食)","その他(洋食)"]], {}, {class: "new__category"}
         = render partial: "error", locals: {food: @food, column: "category_id"}
 
-      .new__input#5
+      .new__input
         = f.label "食材"
         %span 必須
         .new__serving
@@ -43,7 +43,7 @@
           = link_to_add_association '＋次の材料を追加', f, :foodstuffs
         = render partial: "error", locals: {food: @food, column: "食材"}
 
-      .new__input#6
+      .new__input
         = f.label "工程"
         %span 必須
         = f.fields_for :recipes do |r|
