--- a/app/views/foods/_search.html.haml
+++ b/app/views/foods/_search.html.haml
@@ -2,22 +2,22 @@
   .main__side__search
     %h1 検索フォーム
     %p 料理名で検索
-    = form_with url: search_path, method: :get ,local: true do |f|
+    = form_with url: search_foods_path, method: :get ,local: true do |f|
       = f.text_field :search, placeholder: "何を検索しますか？", class: "search__input", id: "search__name"
       = f.submit "検索"
       .search__list
 
     %p 食材で検索
-    = form_with url: search_path, method: :get ,local: true do |f|
+    = form_with url: search_foods_path, method: :get ,local: true do |f|
       = f.text_field :material, placeholder: "何で検索しますか？", class: "search__input"
       = f.submit "検索"
 
     %p カテゴリーで検索
-    = form_with url: "/more", method: :get ,local: true do |f|
+    = form_with url: more_foods_path, method: :get ,local: true do |f|
       = f.select :category, [["カテゴリーを選択してください",""], ["肉","肉"], ["野菜","野菜"], ["中華","中華"], ["魚","魚"], ["麺類","麺類"], ["ご飯物","ご飯物"], ["パン","パン"], ["スープ","スープ"], ["煮物","煮物"], ["中華","中華"], ["パスタ","パスタ"], ["時短","時短"], ["その他(和食)","その他(和食)"], ["その他(洋食)","その他(洋食)"]], {}, {class: "search__input"}
       = f.submit "検索"
 
     %p 条件で検索
-    = form_with url: search_path, method: :get ,local: true do |f|
+    = form_with url: search_foods_path, method: :get ,local: true do |f|
       = f.select :order, [["カテゴリーを選択してください",""], ["最新順で検索",1], ["いいねが多い順で検索",2], ["ランダムに検索",3]], {}, {class: "search__input"}
       = f.submit "検索"
