--- a/app/assets/stylesheets/_responsive.scss
+++ b/app/assets/stylesheets/_responsive.scss
@@ -66,12 +66,13 @@
     &__middle {
       display:block;
       &__img {
-        width:85%;
+        width:70%;
         margin: 20px auto;
         display:block;
       }
       &__stuffs {
         width:85%;
+        margin:0 auto;
         &__top {
           > th {
             font-size:16px;
